# pjsh

./: .editorconfig  .gitattributes  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE.txt  README.md
crates/pjsh/: Cargo.toml
crates/pjsh/src/: exec.rs  main.rs  shell.rs  tests.rs
crates/pjsh/src/action/: mod.rs
crates/pjsh/src/builtins/: complete.rs  mod.rs
crates/pjsh/src/command_shell/: mod.rs
crates/pjsh/src/complete/: contextualized.rs  contextualized_complete.rs  fs.rs  mod.rs  uncontextualized.rs  uncontextualized_complete.rs
crates/pjsh/src/completion/: complete.rs  fs.rs  mod.rs
crates/pjsh/src/error/: mod.rs
crates/pjsh/src/file_shell/: mod.rs
crates/pjsh/src/init/: context.rs  mod.rs
crates/pjsh/src/interactive_shell/: complete.rs  mod.rs  utils.rs
crates/pjsh/src/shell/: command.rs  command_shell.rs  context.rs  file.rs  file_shell.rs  input_shell.rs  interactive.rs  interactive_shell.rs  mod.rs  stdin_shell.rs  utils.rs
crates/pjsh_ast/: Cargo.toml
crates/pjsh_ast/src/: command.rs  condition.rs  control.rs  filter.rs  io.rs  iterable.rs  lib.rs  list.rs  pipeline.rs  program.rs  word.rs
crates/pjsh_builtins/: Cargo.toml
crates/pjsh_builtins/src/: alias.rs  cd.rs  complete.rs  drop.rs  echo.rs  env.rs  exit.rs  export.rs  fs.rs  interpolate.rs  lib.rs  logic.rs  pwd.rs  sleep.rs  source.rs  status.rs  type.rs  unalias.rs  unset.rs  utils.rs  which.rs
crates/pjsh_complete/: Cargo.toml
crates/pjsh_complete/src/: completer.rs  completions.rs  engine.rs  fs.rs  input.rs  known_prefixes.rs  lib.rs  registered_completions.rs  tree.rs  uncontextualized_completions.rs
crates/pjsh_core/: Cargo.toml
crates/pjsh_core/src/: complete.rs  condition.rs  context.rs  file_descriptor.rs  filter.rs  fs.rs  lib.rs  status.rs
crates/pjsh_core/src/command/: action.rs  args.rs  command_trait.rs  io.rs  mod.rs  result.rs
crates/pjsh_core/src/context/: io.rs  mod.rs
crates/pjsh_core/src/env/: context.rs  host.rs  mod.rs  std_host.rs
crates/pjsh_core/src/eval/: command.rs  internal.rs  mod.rs  result.rs  scope.rs
crates/pjsh_core/src/utils/: fs.rs  mod.rs  tests.rs
crates/pjsh_eval/: Cargo.toml
crates/pjsh_eval/src/: actions.rs  alias.rs  call.rs  command.rs  condition.rs  error.rs  filter.rs  interpolate.rs  lib.rs  redirect.rs  resolve.rs  words.rs
crates/pjsh_eval/tests/: integration_tests.rs
crates/pjsh_exec/: Cargo.toml
crates/pjsh_exec/src/: error.rs  executor.rs  exit.rs  io.rs  lib.rs  word.rs
crates/pjsh_exec/src/builtins/: mod.rs
crates/pjsh_exec/src/condition/: fs.rs  logic.rs  mod.rs  string.rs
crates/pjsh_exec/src/expand/: alias.rs  glob.rs  mod.rs  tests.rs
crates/pjsh_exec/src/tests/: and_or.rs  condition.rs  mod.rs  program.rs  refactor_test.rs  statement.rs  utils.rs
crates/pjsh_experimental/: Cargo.toml
crates/pjsh_experimental/src/: ast.rs  error.rs  input.rs  lib.rs  token.rs  traits.rs
crates/pjsh_experimental/src/lex/: lexer.rs  macros.rs  mod.rs  (+1 more)
crates/pjsh_filters/: Cargo.toml
crates/pjsh_filters/src/: join.rs  len.rs  lib.rs  lines.rs  list_items.rs  replace.rs  reverse.rs  sort.rs  split.rs  text_case.rs  unique.rs  words.rs
crates/pjsh_parse/: Cargo.toml
crates/pjsh_parse/src/: error.rs  lib.rs  token.rs  tokens.rs
doc/: book.toml  grammar.ebnf  ng_example.pjsh  ng_grammar.ebnf
doc/src/: SUMMARY.md  aliasing.md  basics.md  built-in-commands.md  command-line-interface.md  command-resolution.md  commands.md  conditionals.md  configuration.md  environment.md  filtering.md  functions.md  globbing.md  grammar.md  index.md  init-scripts.md  installation.md  introduction.md  known-issues.md  loops.md  pipelines.md  quoting.md  redirection.md  scopes.md  special-environment-variables.md  standard-environment-variables.md
examples/: for_in_loop.pjsh  function.pjsh  hello_world.pjsh  if-statement.pjsh  lists.pjsh  smart_pipeline.pjsh  switch-statement.pjsh  transact.pjsh  vars.pjsh
scripts/: check-code-format.sh  lint.sh  make-docs.sh  make-perf.sh  test-coverage.sh
src/: builtins.rs  cursor.rs  executor.rs  input.rs  lexer.rs  main.rs  options.rs  parser.rs  shell.rs  token.rs
src/ast/: mod.rs
src/builtin/: io.rs  logic.rs  mod.rs
src/builtin_utils/: cd.rs  mod.rs
src/execution/: environment.rs  error.rs  exit_status.rs  mod.rs
src/executor/: error.rs  exit_status.rs  mod.rs
src/lexer/: double_quoted_mode.rs  mod.rs  new_lexer.rs  posix.rs  posix_lexer.rs  single_quoted_mode.rs  unquoted_mode.rs
src/old/: builtins.rs  executor.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/parse/: adapter.rs  command.rs  io.rs  meta.rs  mod.rs  pipeline.rs  posix.rs  word.rs
src/parser/: adapter.rs  command.rs  error.rs  io.rs  meta.rs  mod.rs  pipeline.rs  posix.rs  word.rs
(+24 files in other folders)
