[package]
name = "pjsh"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
dirs = "4.0"
lazy_static = "1.4.0"
parking_lot = {version = "0.12.0", features = ["deadlock_detection"] }
regex = "1"
rustyline = "9.1"
rustyline-derive = "0.6"

pjsh_ast = { path = "../pjsh_ast" }
pjsh_builtins = { path = "../pjsh_builtins" }
pjsh_core = { path = "../pjsh_core" }
pjsh_exec = { path = "../pjsh_exec" }
pjsh_parse = { path = "../pjsh_parse" }

[dev-dependencies]
mockall = "0.11.0"
