[package]
name = "pjsh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Main executable for PJSH."

[dependencies]
atty = "0.2.14"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
dirs = "4.0"
lazy_static = "1.4.0"
parking_lot = {version = "0.12.0", features = ["deadlock_detection"] }
regex = "1"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"

pjsh_ast = { path = "../pjsh_ast" }
pjsh_builtins = { path = "../pjsh_builtins" }
pjsh_core = { path = "../pjsh_core" }
pjsh_exec = { path = "../pjsh_exec" }
pjsh_parse = { path = "../pjsh_parse" }

[dev-dependencies]
mockall = "0.11.0"
