[package]
name = "pjsh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Main executable for PJSH."

[dependencies]
ansi_term = "0.12"
atty = "0.2"
clap = { version = "4", features = ["cargo", "derive"] }
dirs = "4"
is_executable = "1"
itertools = "0.10"
lazy_static = "1"
parking_lot = {version = "0.12", features = ["deadlock_detection"] }
regex = "1"
rustyline = "10"
rustyline-derive = "0.7"

pjsh_ast = { path = "../pjsh_ast" }
pjsh_builtins = { path = "../pjsh_builtins" }
pjsh_core = { path = "../pjsh_core" }
pjsh_eval = { path = "../pjsh_eval" }
pjsh_parse = { path = "../pjsh_parse" }

[dev-dependencies]
mockall = "0.11"
