[package]
name = "pjsh_builtins"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
parking_lot = {version = "0.12.1", features = ["deadlock_detection"] }

pjsh_core = { path = "../pjsh_core" }

[dev-dependencies]
tempfile = "3.2.0"
