[package]
name = "pjsh_builtins"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Built-in commands for PJSH."

[dependencies]
clap = { version = "4", features = ["derive"] }
parking_lot = {version = "0.12", features = ["deadlock_detection"] }

pjsh_core = { path = "../pjsh_core" }

[dev-dependencies]
tempfile = "3"
