[package]
name = "pjsh_exec"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
dirs = "4.0"
os_pipe = "1.0.0"
parking_lot = {version = "0.11", features = ["deadlock_detection"] }
tempfile = "3.2.0"

pjsh_ast = { path = "../pjsh_ast" }
pjsh_builtins = { path = "../pjsh_builtins" }
pjsh_core = { path = "../pjsh_core" }
