[package]
name = "pjsh_exec"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
dirs = "4.0"
os_pipe = "1.0.0"
parking_lot = {version = "0.12.0", features = ["deadlock_detection"] }
tempfile = "3.2.0"

pjsh_ast = { path = "../pjsh_ast" }
pjsh_core = { path = "../pjsh_core" }
pjsh_parse = { path = "../pjsh_parse" }

[dev-dependencies]
mockall = "0.11.1"
