[package]
name = "pjsh_exec"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Executor/interpreter for PJSH."

[dependencies]
dirs = "4.0"
os_pipe = "1.0.0"
parking_lot = {version = "0.12.0", features = ["deadlock_detection"] }
rand = "0.8.5"
sysinfo = "0.26.2"
tempfile = "3.2.0"

pjsh_ast = { path = "../pjsh_ast" }
pjsh_core = { path = "../pjsh_core" }
pjsh_parse = { path = "../pjsh_parse" }

[dev-dependencies]
mockall = "0.11.1"
